Add meta description and keywords

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,9 @@
     <meta charset="UTF-8">
     <title>Crip Talk Forum</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- Meta tags for search engines -->
+    <meta name="description" content="Crip Talk Forum. A separatist forum for people with disabilities. Forum for disabled people.">
+    <meta name="keywords" content="forum, crip, disabled, disability forum, disability">
 
     <!-- Google Fonts CSS -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
