--- a/forumapp/templates/forumapp/post_list.html
+++ b/forumapp/templates/forumapp/post_list.html
@@ -16,7 +16,7 @@
                                 Posted {{ post.created_on|naturaltime }} by {{ post.author.username }}
                             </small>
                         </p>
-                        <a href="{% url 'post_detail' slug=post.slug %}" class="btn btn-primary read-more">Read post</a>
+                        <a href="{% url 'post_detail' slug=post.slug %}" class="btn btn-primary read-more" aria-label="Read more about '{{ post.title }}'">Read post</a>
                     </div>
                 </div>
             </div>
