--- a/templates/base.html
+++ b/templates/base.html
@@ -48,7 +48,7 @@
                 <ul class="navbar-nav">
                     <!-- Home -->
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'home' %}">Home</a>
+                        <a class="nav-link" href="{% url 'home' %}" aria-label="Home">Home</a>
                     </li>
 
                     <!-- Topics (Dropdown) -->
@@ -57,10 +57,10 @@
                             Topics
                         </a>
                         <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                            <a class="dropdown-item" href="{% url 'family' %}">Family</a>
-                            <a class="dropdown-item" href="{% url 'pastimes' %}">Pastimes</a>
-                            <a class="dropdown-item" href="{% url 'career' %}">Career</a>
-                            <a class="dropdown-item" href="{% url 'wall_of_complaints' %}">Wall of Complaints</a>
+                            <a class="dropdown-item" href="{% url 'family' %}" aria-label="Family">Family</a>
+                            <a class="dropdown-item" href="{% url 'pastimes' %}" aria-label="Pastimes">Pastimes</a>
+                            <a class="dropdown-item" href="{% url 'career' %}" aria-label="Career">Career</a>
+                            <a class="dropdown-item" href="{% url 'wall_of_complaints' %}" aria-label="Wall of Complaints">Wall of Complaints</a>
                         </div>
                     </li>
                 </ul>
@@ -68,22 +68,22 @@
                     {% if user.is_authenticated %}
                     <!-- Create posts -->
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'create_post' %}">Create Post</a>
+                        <a class="nav-link" href="{% url 'create_post' %}" aria-label="Create Post">Create Post</a>
                     </li>
                     <!-- Logout -->
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+                        <a class="nav-link" href="{% url 'logout' %}" aria-label="Logout">Logout</a>
                     </li>
 
                     {% else %}
                     <!-- Sign Up -->
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'signup' %}">Sign Up</a>
+                        <a class="nav-link" href="{% url 'signup' %}" aria-label="Sign Up">Sign Up</a>
                     </li>
 
                     <!-- Login -->
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'login' %}">Login</a>
+                        <a class="nav-link" href="{% url 'login' %}" aria-label="Login">Login</a>
                     </li>
                     {% endif %}
                 </ul>
@@ -107,11 +107,19 @@
 
     <!-- Footer -->
     <footer class="footer mt-auto py-3 dark-bg">
-        <p class="m-0 text-center text-white">Follow us: <i class="fab fa-facebook-square ms-3"></i>
+        Follow us:
+        <a href="https://www.facebook.com" target="_blank" rel="noopener noreferrer" aria-label="Facebook, opens in new tab">
+            <i class="fab fa-facebook-square ms-3"></i>
+        </a>
+        <a href="https://twitter.com" target="_blank" rel="noopener noreferrer" aria-label="Twitter, opens in new tab">
             <i class="fab fa-twitter-square ms-3"></i>
+        </a>
+        <a href="https://www.instagram.com" target="_blank" rel="noopener noreferrer" aria-label="Instagram, opens in new tab">
             <i class="fab fa-instagram-square ms-3"></i>
+        </a>
+        <a href="https://www.youtube.com" target="_blank" rel="noopener noreferrer" aria-label="YouTube, opens in new tab">
             <i class="fab fa-youtube-square ms-3"></i>
-        </p>
+        </a>
     </footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
