--- a/static/css/style.css
+++ b/static/css/style.css
@@ -254,6 +254,10 @@ h1{
     padding: 0.25rem 0.5rem;
 }
 
+.btn-secondary .cancel {
+    background-color: #9ec5ff;
+}
+
 /* Sign up page */
 .login-form {
     padding: 1.25rem 0.6rem;
