--- a/forumapp/templates/forumapp/post_detail.html
+++ b/forumapp/templates/forumapp/post_detail.html
@@ -28,7 +28,7 @@
                         </form>
                         <form method="post" action="{% url 'delete-post' slug=post.slug %}" style="display:inline;">
                             {% csrf_token %}
-                            <button type="submit" class="btn btn-primary post-button" onclick="return confirm('Are you sure you want to delete this post?')">Delete</button>
+                            <button type="submit" class="btn btn-primary delete-post-button">Delete</button>
                         </form>
                 {% endif %}
                 </p>
