--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -269,13 +269,13 @@ h1{
 }
 
 /* Footer */
-footer {
+.footer {
     margin-top: auto;
+    text-align: center;
 }
 
-/* Report function */
-#reportForm {
-    display: none;
+.fab {
+    color: #f8f8f8;
 }
 
 .thin {
