--- a/templates/base.html
+++ b/templates/base.html
@@ -107,19 +107,20 @@
 
     <!-- Footer -->
     <footer class="footer mt-auto py-3 dark-bg">
-        Follow us:
-        <a href="https://www.facebook.com" target="_blank" rel="noopener noreferrer" aria-label="Facebook, opens in new tab">
-            <i class="fab fa-facebook-square ms-3"></i>
-        </a>
-        <a href="https://twitter.com" target="_blank" rel="noopener noreferrer" aria-label="Twitter, opens in new tab">
-            <i class="fab fa-twitter-square ms-3"></i>
-        </a>
-        <a href="https://www.instagram.com" target="_blank" rel="noopener noreferrer" aria-label="Instagram, opens in new tab">
-            <i class="fab fa-instagram-square ms-3"></i>
-        </a>
-        <a href="https://www.youtube.com" target="_blank" rel="noopener noreferrer" aria-label="YouTube, opens in new tab">
-            <i class="fab fa-youtube-square ms-3"></i>
-        </a>
+        <p>Follow us on our social media: 
+            <a href="https://www.facebook.com" target="_blank" rel="noopener noreferrer" aria-label="Facebook, opens in new tab">
+                <i class="fab fa-facebook-square ms-3"></i>
+            </a>
+            <a href="https://twitter.com" target="_blank" rel="noopener noreferrer" aria-label="Twitter, opens in new tab">
+                <i class="fab fa-twitter-square ms-3"></i>
+            </a>
+            <a href="https://www.instagram.com" target="_blank" rel="noopener noreferrer" aria-label="Instagram, opens in new tab">
+                <i class="fab fa-instagram-square ms-3"></i>
+            </a>
+            <a href="https://www.youtube.com" target="_blank" rel="noopener noreferrer" aria-label="YouTube, opens in new tab">
+                <i class="fab fa-youtube-square ms-3"></i>
+            </a>
+        </p>
     </footer>
     <!-- Modal HTML structure -->
     <div class="modal fade" id="confirmationModal" tabindex="-1" aria-labelledby="confirmationModalLabel" aria-hidden="true">
