--- a/static/css/style.css
+++ b/static/css/style.css
@@ -268,6 +268,11 @@ h1{
     margin-bottom: 0.6rem;
 }
 
+/* Search results page */
+.center {
+    text-align: center;
+}
+
 /* Footer */
 .footer {
     margin-top: auto;
