--- a/forumapp/templates/forumapp/post_detail.html
+++ b/forumapp/templates/forumapp/post_detail.html
@@ -62,7 +62,8 @@
                         </form>
                         <form method="post" action="{% url 'delete-comment' pk=comment.id %}" style="display:inline;">
                             {% csrf_token %}
-                            <button type="submit" class="btn btn-primary comment-button" onclick="return confirm('Are you sure you want to delete this comment?')">Delete</button>
+                            <button type="button" class="btn btn-primary delete-comment-button">Delete</button>
+                        </form>
                         </form>
                     </p>
                     {% endif %}
