--- a/forumapp/templates/forumapp/signup.html
+++ b/forumapp/templates/forumapp/signup.html
@@ -104,7 +104,7 @@
             <div class="form-group">
                 <div class="custom-control">
                     {{form.check}}
-                    <label>I Accept <a href="{% url 'terms' %}" class="text-primary">Terms And Condition</a></label>
+                    <label>I Accept <a target="_blank" href="{% url 'terms' %}" class="text-primary">Terms And Condition</a></label>
                 </div>
                 {% if form.check.errors %}
                 {% for error in form.check.errors %}
