--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -284,6 +284,11 @@ h1{
     color: #f8f8f8;
 }
 
+.four-background {
+    background-color: #9ec5ff;
+    color: #272d2d;
+}
+
 .thin {
     font-weight: 300;
 }
