--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Crip Talk Forum</title>
+    <link rel="icon" type="image/x-icon" href="{% static 'favicon/speech-bubble.png' %}">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- Meta tags for search engines -->
     <meta name="description" content="Crip Talk Forum. A separatist forum for people with disabilities. Forum for disabled people.">
