--- a/forumapp/templates/forumapp/signup.html
+++ b/forumapp/templates/forumapp/signup.html
@@ -104,7 +104,7 @@
             <div class="form-group">
                 <div class="custom-control">
                     {{form.check}}
-                    <label>I Accept <a target="_blank" href="{% url 'terms' %}" class="text-primary">Terms And Condition</a></label>
+                    <label>I Accept <a target="_blank" href="{% url 'terms' %}" class="link link:hover link:active" aria-label="Link to terms and conditions, opens in new tab">Terms And Condition</a></label>
                 </div>
                 {% if form.check.errors %}
                 {% for error in form.check.errors %}
@@ -116,7 +116,7 @@
             </div>
         </div>
         <div class="col-md-12">
-            <button class="btn btn-primary" type="submit">Register</button>
+            <button class="btn btn-primary btn-signup" type="submit">Register</button>
         </div>
         <div class="mx-auto">
             <p class="mb-0 mt-3"><small class="text-dark mr-2">Already have an account ?</small> <a
