--- a/templates/base.html
+++ b/templates/base.html
@@ -6,135 +6,145 @@
 <!DOCTYPE html>
 <html class="h-100" lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <title>Crip Talk Forum</title>
-    <link rel="icon" type="image/x-icon" href="{% static 'favicon/speech-bubble.png' %}">
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- Meta tags for search engines -->
-    <meta name="description" content="Crip Talk Forum. A separatist forum for people with disabilities. Forum for disabled people.">
-    <meta name="keywords" content="forum, crip, disabled, disability forum, disability">
-    
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-</head>
 
-<body>
+    <head>
+        <meta charset="UTF-8">
+        <title>Crip Talk Forum</title>
+        <link rel="icon" type="image/x-icon" href="{% static 'favicon/speech-bubble.png' %}">
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <!-- Meta tags for search engines -->
+        <meta name="description"
+            content="Crip Talk Forum. A separatist forum for people with disabilities. Forum for disabled people.">
+        <meta name="keywords" content="forum, crip, disabled, disability forum, disability">
 
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container">
-            <!-- Navbar Brand/Logo -->
-            <a class="navbar-brand" href="{% url 'home' %}">Crip Talk Forum</a>
-    
-            <!-- Navbar Toggle Button (for mobile) -->
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-    
-            <!-- Navbar Links -->
-            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                <ul class="navbar-nav">
-                    <!-- Home -->
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'home' %}" aria-label="Home">Home</a>
-                    </li>
+        <!-- Bootstrap CSS -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+            integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-                    <!-- Topics (Dropdown) -->
-                    <li class="nav-item dropdown" id="topicsDropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Topics
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                            <a class="dropdown-item" href="{% url 'family' %}" aria-label="Family">Family</a>
-                            <a class="dropdown-item" href="{% url 'pastimes' %}" aria-label="Pastimes">Pastimes</a>
-                            <a class="dropdown-item" href="{% url 'career' %}" aria-label="Career">Career</a>
-                            <a class="dropdown-item" href="{% url 'wall_of_complaints' %}" aria-label="Wall of Complaints">Wall of Complaints</a>
-                        </div>
-                    </li>
-                </ul>
-                <ul class="navbar-nav ml-auto">
-                    {% if user.is_authenticated %}
-                    <!-- Create posts -->
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'create_post' %}" aria-label="Create Post">Create Post</a>
-                    </li>
-                    <!-- Logout -->
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'logout' %}" aria-label="Logout">Logout</a>
-                    </li>
+        <!-- Custom CSS -->
+        <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    </head>
 
-                    {% else %}
-                    <!-- Sign Up -->
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'signup' %}" aria-label="Sign Up">Sign Up</a>
-                    </li>
+    <body>
 
-                    <!-- Login -->
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'login' %}" aria-label="Login">Login</a>
-                    </li>
-                    {% endif %}
-                </ul>
-                <form class="d-flex" method="POST" action="{% url 'search-results' %}">
-                    {% csrf_token %}
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="searched">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
-            </div>
-        </div>
-    </nav>
-    
+        <!-- Navigation -->
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container">
+                <!-- Navbar Brand/Logo -->
+                <a class="navbar-brand" href="{% url 'home' %}">Crip Talk Forum</a>
 
-    <main class="flex-shrink-0 main-bg">
+                <!-- Navbar Toggle Button (for mobile) -->
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
 
-        {% block content %}
-        <!-- Content Goes here -->
-        {% endblock content %}
+                <!-- Navbar Links -->
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <!-- Home -->
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'home' %}" aria-label="Home">Home</a>
+                        </li>
 
-    </main>
+                        <!-- Topics (Dropdown) -->
+                        <li class="nav-item dropdown" id="topicsDropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
+                                data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Topics
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                                <a class="dropdown-item" href="{% url 'family' %}" aria-label="Family">Family</a>
+                                <a class="dropdown-item" href="{% url 'pastimes' %}" aria-label="Pastimes">Pastimes</a>
+                                <a class="dropdown-item" href="{% url 'career' %}" aria-label="Career">Career</a>
+                                <a class="dropdown-item" href="{% url 'wall_of_complaints' %}"
+                                    aria-label="Wall of Complaints">Wall of Complaints</a>
+                            </div>
+                        </li>
+                    </ul>
+                    <ul class="navbar-nav ml-auto">
+                        {% if user.is_authenticated %}
+                        <!-- Create posts -->
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'create_post' %}" aria-label="Create Post">Create Post</a>
+                        </li>
+                        <!-- Logout -->
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'logout' %}" aria-label="Logout">Logout</a>
+                        </li>
 
-    <!-- Footer -->
-    <footer class="footer mt-auto py-3 dark-bg">
-        <p>Follow us on our social media: 
-            <a href="https://www.facebook.com" target="_blank" rel="noopener noreferrer" aria-label="Facebook, opens in new tab">
-                <i class="fab fa-facebook-square ms-3"></i>
-            </a>
-            <a href="https://twitter.com" target="_blank" rel="noopener noreferrer" aria-label="Twitter, opens in new tab">
-                <i class="fab fa-twitter-square ms-3"></i>
-            </a>
-            <a href="https://www.instagram.com" target="_blank" rel="noopener noreferrer" aria-label="Instagram, opens in new tab">
-                <i class="fab fa-instagram-square ms-3"></i>
-            </a>
-            <a href="https://www.youtube.com" target="_blank" rel="noopener noreferrer" aria-label="YouTube, opens in new tab">
-                <i class="fab fa-youtube-square ms-3"></i>
-            </a>
-        </p>
-    </footer>
-    <!-- Modal HTML structure -->
-    <div class="modal fade" id="confirmationModal" tabindex="-1" aria-labelledby="confirmationModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body" id="confirmationMessage"></div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary cancel" data-bs-dismiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-primary" id="confirmAction">Delete</button>
+                        {% else %}
+                        <!-- Sign Up -->
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'signup' %}" aria-label="Sign Up">Sign Up</a>
+                        </li>
+
+                        <!-- Login -->
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'login' %}" aria-label="Login">Login</a>
+                        </li>
+                        {% endif %}
+                    </ul>
+                    <form class="d-flex" method="POST" action="{% url 'search-results' %}">
+                        {% csrf_token %}
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"
+                            name="searched">
+                        <button class="btn btn-outline-success" type="submit">Search</button>
+                    </form>
                 </div>
             </div>
+        </nav>
+
+
+        <main class="flex-shrink-0 main-bg">
+
+            {% block content %}
+            <!-- Content Goes here -->
+            {% endblock content %}
+
+        </main>
+
+        <!-- Footer -->
+        <footer class="footer mt-auto py-3 dark-bg">
+            <p>Follow us on our social media:
+                <a href="https://www.facebook.com" target="_blank" rel="noopener noreferrer"
+                    aria-label="Facebook, opens in new tab">
+                    <i class="fab fa-facebook-square ms-3"></i>
+                </a>
+                <a href="https://twitter.com" target="_blank" rel="noopener noreferrer"
+                    aria-label="Twitter, opens in new tab">
+                    <i class="fab fa-twitter-square ms-3"></i>
+                </a>
+                <a href="https://www.instagram.com" target="_blank" rel="noopener noreferrer"
+                    aria-label="Instagram, opens in new tab">
+                    <i class="fab fa-instagram-square ms-3"></i>
+                </a>
+                <a href="https://www.youtube.com" target="_blank" rel="noopener noreferrer"
+                    aria-label="YouTube, opens in new tab">
+                    <i class="fab fa-youtube-square ms-3"></i>
+                </a>
+            </p>
+        </footer>
+        <!-- Modal HTML structure -->
+        <div class="modal fade" id="confirmationModal" tabindex="-1" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body" id="confirmationMessage"></div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary cancel" data-bs-dismiss="modal">Cancel</button>
+                        <button type="button" class="btn btn-primary" id="confirmAction">Delete</button>
+                    </div>
+                </div>
+            </div>
         </div>
-    </div>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" 
-    crossorigin="anonymous"></script>
-    <script src="{% static 'js/script.js' %}"></script>
-</body>
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+            crossorigin="anonymous"></script>
+        <script src="{% static 'js/script.js' %}"></script>
+    </body>
 
 </html>
