--- a/templates/base.html
+++ b/templates/base.html
@@ -107,21 +107,21 @@
         <!-- Footer -->
         <footer class="footer mt-auto py-3 dark-bg">
             <p>Follow us on our social media:
-                <a href="https://www.facebook.com" target="_blank" rel="noopener noreferrer"
+                <a href="https://www.facebook.com" target="_blank" rel="noopener noreferrer" class="link-white"
                     aria-label="Facebook, opens in new tab">
-                    <i class="fab fa-facebook-square ms-3"></i>
+                    Facebook
                 </a>
-                <a href="https://twitter.com" target="_blank" rel="noopener noreferrer"
+                <a href="https://twitter.com" target="_blank" rel="noopener noreferrer" class="link-white"
                     aria-label="Twitter, opens in new tab">
-                    <i class="fab fa-twitter-square ms-3"></i>
+                    Twitter
                 </a>
-                <a href="https://www.instagram.com" target="_blank" rel="noopener noreferrer"
+                <a href="https://www.instagram.com" target="_blank" rel="noopener noreferrer" class="link-white"
                     aria-label="Instagram, opens in new tab">
-                    <i class="fab fa-instagram-square ms-3"></i>
+                    Instagram
                 </a>
-                <a href="https://www.youtube.com" target="_blank" rel="noopener noreferrer"
+                <a href="https://www.youtube.com" target="_blank" rel="noopener noreferrer" class="link-white"
                     aria-label="YouTube, opens in new tab">
-                    <i class="fab fa-youtube-square ms-3"></i>
+                    Youtube
                 </a>
             </p>
         </footer>
